content/docs/9500_python-api/9000_versions/v0.2.10/splitgraph.ingestion.snowflake.mdx



export const meta = {
  title: "splitgraph.ingestion.snowflake package",
  id: "splitgraph.ingestion.snowflake package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li></ol></nav><div className="section" id="module-splitgraph.ingestion.snowflake">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph.ingestion.snowflake" title="Permalink to this headline">¶</a></h2>
<dl className="py class">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.ingestion.snowflake.</span></code><code className="sig-name descname"><span className="pre">SnowflakeDataSource</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PostgresEngine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">credentials</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="splitgraph.hooks.data_source/#splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource" title="splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.hooks.data_source.fdw.ForeignDataWrapperDataSource</span></code></a></p>
<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.commandline_help">
<code className="sig-name descname"><span className="pre">commandline_help</span></code><em className="property"><span className="pre">:</span> <span className="pre">str</span></em><em className="property"> <span className="pre">=</span> <span className="pre">'Mount</span> <span className="pre">a</span> <span className="pre">Snowflake</span> <span className="pre">database.\n</span>    <span className="pre">\nThis</span> <span className="pre">will</span> <span className="pre">mount</span> <span className="pre">a</span> <span className="pre">remote</span> <span className="pre">Snowflake</span> <span className="pre">schema</span> <span className="pre">or</span> <span className="pre">a</span> <span className="pre">table.</span> <span className="pre">You</span> <span className="pre">can</span> <span className="pre">also</span> <span className="pre">get</span> <span className="pre">a</span> <span className="pre">mounted</span> <span className="pre">table</span> <span className="pre">to</span> <span className="pre">point</span> <span className="pre">to</span> <span className="pre">the</span> <span className="pre">result</span> <span className="pre">of</span> <span className="pre">a</span> <span className="pre">subquery</span> <span className="pre">that</span> <span className="pre">will</span> <span className="pre">be</span> <span className="pre">executed</span> <span className="pre">on</span> <span className="pre">the</span> <span className="pre">Snowflake</span> <span className="pre">instance.</span> <span className="pre">For</span> <span className="pre">example:\n\n\x08\n```\n$</span> <span className="pre">sgr</span> <span className="pre">mount</span> <span className="pre">snowflake</span> <span className="pre">test_snowflake</span> <span className="pre">-o@-</span> <span className="pre">&lt;&lt;EOF\n&#38;lbrace;\n</span>    <span className="pre">"username":</span> <span className="pre">"username",\n</span>    <span className="pre">"password":</span> <span className="pre">"password",\n</span>    <span className="pre">"account":</span> <span className="pre">"acc-id.west-europe.azure",\n</span>    <span className="pre">"database":</span> <span className="pre">"SNOWFLAKE_SAMPLE_DATA",\n</span>    <span className="pre">"schema":</span> <span className="pre">"TPCH_SF100"\n&#38;rbrace;\nEOF\n\n$</span> <span className="pre">sgr</span> <span className="pre">mount</span> <span className="pre">snowflake</span> <span className="pre">test_snowflake_subquery</span> <span className="pre">-o@-</span> <span className="pre">&lt;&lt;EOF\n&#38;lbrace;\n</span>    <span className="pre">"username":</span> <span className="pre">"username",\n</span>    <span className="pre">"password":</span> <span className="pre">"password",\n</span>    <span className="pre">"account":</span> <span className="pre">"acc-id.west-europe.azure",\n</span>    <span className="pre">"database":</span> <span className="pre">"SNOWFLAKE_SAMPLE_DATA",\n</span>    <span className="pre">"tables":</span> <span className="pre">&#38;lbrace;\n</span>        <span className="pre">"balances":</span> <span className="pre">&#38;lbrace;\n</span>            <span className="pre">"schema":</span> <span className="pre">&#38;lbrace;\n</span>                <span className="pre">"n_nation":</span> <span className="pre">"varchar",\n</span>                <span className="pre">"segment":</span> <span className="pre">"varchar",\n</span>                <span className="pre">"avg_balance":</span> <span className="pre">"numeric"\n</span>            <span className="pre">&#38;rbrace;,\n</span>            <span className="pre">"options":</span> <span className="pre">&#38;lbrace;\n</span>                <span className="pre">"subquery":</span> <span className="pre">"SELECT</span> <span className="pre">n_nation</span> <span className="pre">AS</span> <span className="pre">nation,</span> <span className="pre">c_mktsegment</span> <span className="pre">AS</span> <span className="pre">segment,</span> <span className="pre">AVG(c_acctbal)</span> <span className="pre">AS</span> <span className="pre">avg_balance</span> <span className="pre">FROM</span> <span className="pre">TPCH_SF100.customer</span> <span className="pre">c</span> <span className="pre">JOIN</span> <span className="pre">TPCH_SF100.nation</span> <span className="pre">n</span> <span className="pre">ON</span> <span className="pre">c_nationkey</span> <span className="pre">=</span> <span className="pre">n_nationkey"\n</span>            <span className="pre">&#38;rbrace;\n</span>        <span className="pre">&#38;rbrace;\n</span>    <span className="pre">&#38;rbrace;\n&#38;rbrace;\nEOF\n```\n</span>    <span className="pre">'</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.commandline_help" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.commandline_kwargs_help">
<code className="sig-name descname"><span className="pre">commandline_kwargs_help</span></code><em className="property"><span className="pre">:</span> <span className="pre">str</span></em><em className="property"> <span className="pre">=</span> <span className="pre">'username:</span> <span className="pre">Username.</span> <span className="pre">Required.\npassword:</span> <span className="pre">Password.</span> <span className="pre">Required.\naccount:</span> <span className="pre">Account</span> <span className="pre">Locator,</span> <span className="pre">e.g.</span> <span className="pre">xy12345.us-east-2.aws.</span> <span className="pre">For</span> <span className="pre">more</span> <span className="pre">information,</span> <span className="pre">see</span> <span className="pre">https://docs.snowflake.com/en/user-guide/connecting.html.</span> <span className="pre">Required.\ntables:</span> <span className="pre">Tables</span> <span className="pre">to</span> <span className="pre">mount</span> <span className="pre">(default</span> <span className="pre">all).</span> <span className="pre">If</span> <span className="pre">a</span> <span className="pre">list,</span> <span className="pre">will</span> <span className="pre">import</span> <span className="pre">only</span> <span className="pre">these</span> <span className="pre">tables.</span> <span className="pre">\nIf</span> <span className="pre">a</span> <span className="pre">dictionary,</span> <span className="pre">must</span> <span className="pre">have</span> <span className="pre">the</span> <span className="pre">format\n</span>    <span className="pre">&#38;lbrace;"table_name":</span> <span className="pre">&#38;lbrace;"schema":</span> <span className="pre">&#38;lbrace;"col_1":</span> <span className="pre">"type_1",</span> <span className="pre">...&#38;rbrace;,\n</span>                    <span className="pre">"options":</span> <span className="pre">&#38;lbrace;[get</span> <span className="pre">passed</span> <span className="pre">to</span> <span className="pre">CREATE</span> <span className="pre">FOREIGN</span> <span className="pre">TABLE]&#38;rbrace;&#38;rbrace;&#38;rbrace;.\ndatabase:</span> <span className="pre">Snowflake</span> <span className="pre">database</span> <span className="pre">name.</span> <span className="pre">Required.\nschema:</span> <span className="pre">Snowflake</span> <span className="pre">schema.\nwarehouse:</span> <span className="pre">Warehouse</span> <span className="pre">name.\nrole:</span> <span className="pre">Role.\nThe</span> <span className="pre">schema</span> <span className="pre">parameter</span> <span className="pre">is</span> <span className="pre">required</span> <span className="pre">when</span> <span className="pre">subquery</span> <span className="pre">isn\'t</span> <span className="pre">used.'</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.commandline_kwargs_help" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.credentials_schema">
<code className="sig-name descname"><span className="pre">credentials_schema</span></code><em className="property"><span className="pre">:</span> <span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"> <span className="pre">=</span> <span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'account':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Account</span> <span className="pre">Locator,</span> <span className="pre">e.g.</span> <span className="pre">xy12345.us-east-2.aws.</span> <span className="pre">For</span> <span className="pre">more</span> <span className="pre">information,</span> <span className="pre">see</span> <span className="pre">https://docs.snowflake.com/en/user-guide/connecting.html',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'password':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Password',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'username':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Username',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'required':</span> <span className="pre">['username',</span> <span className="pre">'password',</span> <span className="pre">'account'],</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.credentials_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_description">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">get_description</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_description" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_fdw_name">
<code className="sig-name descname"><span className="pre">get_fdw_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_fdw_name" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_name">
<em className="property"><span className="pre">classmethod</span> </em><code className="sig-name descname"><span className="pre">get_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_name" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_remote_schema_name">
<code className="sig-name descname"><span className="pre">get_remote_schema_name</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span> → <span className="pre">str</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_remote_schema_name" title="Permalink to this definition">¶</a></dt>
<dd><p>Override this if the FDW supports IMPORT FOREIGN SCHEMA</p>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_server_options">
<code className="sig-name descname"><span className="pre">get_server_options</span></code><span className="sig-paren">(</span><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_server_options" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py method">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.get_table_options">
<code className="sig-name descname"><span className="pre">get_table_options</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">table_name</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em><span className="sig-paren">)</span> → <span className="pre">Mapping</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.get_table_options" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.params_schema">
<code className="sig-name descname"><span className="pre">params_schema</span></code><em className="property"><span className="pre">:</span> <span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></em><em className="property"> <span className="pre">=</span> <span className="pre">&#38;lbrace;'properties':</span> <span className="pre">&#38;lbrace;'database':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Snowflake</span> <span className="pre">database</span> <span className="pre">name',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'role':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Role',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'schema':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Snowflake</span> <span className="pre">schema',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'tables':</span> <span className="pre">&#38;lbrace;'additionalProperties':</span> <span className="pre">&#38;lbrace;'options':</span> <span className="pre">&#38;lbrace;'additionalProperties':</span> <span className="pre">&#38;lbrace;'type':</span> <span className="pre">'string'&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;,</span> <span className="pre">'warehouse':</span> <span className="pre">&#38;lbrace;'description':</span> <span className="pre">'Warehouse</span> <span className="pre">name',</span> <span className="pre">'type':</span> <span className="pre">'string'&#38;rbrace;&#38;rbrace;,</span> <span className="pre">'required':</span> <span className="pre">['database'],</span> <span className="pre">'type':</span> <span className="pre">'object'&#38;rbrace;</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.params_schema" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_load">
<code className="sig-name descname"><span className="pre">supports_load</span></code><em className="property"> <span className="pre">=</span> <span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_load" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_mount">
<code className="sig-name descname"><span className="pre">supports_mount</span></code><em className="property"> <span className="pre">=</span> <span className="pre">True</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_mount" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py attribute">
<dt id="splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_sync">
<code className="sig-name descname"><span className="pre">supports_sync</span></code><em className="property"> <span className="pre">=</span> <span className="pre">False</span></em><a className="headerlink" href="#splitgraph.ingestion.snowflake.SnowflakeDataSource.supports_sync" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</dd></dl>

</div><div className="section" id="splitgraph-ingestion-snowflake-package">


</div>
</div>